# Reader

./: README.md  hello.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  constants.js
frontend/src/components/: ChatGPT.jsx  Navbar.jsx  NewPDFViewer.jsx  NotesCreation.jsx  PDFList.jsx  PDFUpload.jsx  PDFViewer.jsx  ProtectedRoute.jsx  loginPage.jsx  registerPage.jsx
frontend/src/pages/: HomePage.jsx
frontend/src/styles/: Navbar.css  NewPDFViewer.css  PDFList.css  PDFViewer.css  UploadForm.css
pdf/: db.sqlite3
pdf/home/: admin.py  models.py  serializers.py  views.py
pdf/home/migrations/: 0001_initial.py  0002_pdf_pdfnotes.py
pdf/pdf/: asgi.py  settings.py  urls.py  wsgi.py
